# ProjetMI4N

./: .gitignore  CMakeLists.txt  Makefile  README.md  c-wire.sh
codeC/: CMakeLists.txt
codeC/include/: avl.h  csvManaging.h
codeC/src/: avl.c  csvManaging.c  fonx.c  main.c
include/: avl.h  csvManaging.h  fonx.h
src/: avl.c  csvManaging.c  fonx.c  main.c
